k8s/kyverno-policies/disallow-privileged.yaml
# Baseline security: privileged containers are forbidden.
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
spec:
  rules:
    - name: check-privileged
      match:
        any:
          - resources:
              kinds:
                - Pod
      # System/infra namespaces host vendored third-party workloads we do not
      # control (and cannot make fully compliant); Enforce there would block
      # them. Application namespaces stay enforced (fail-closed: any namespace
      # not listed here is blocked).
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kube-public
                - kube-node-lease
                - kyverno
                - argocd
                - argo-rollouts
                - monitoring
                - cert-manager
                - ingress-nginx
                - dex
                - headlamp
                - oauth2-proxy
                - local-path-storage
      validate:
        failureAction: Enforce
        message: "Privileged containers are not allowed (securityContext.privileged must be false)."
        pattern:
          spec:
            =(initContainers):
              - =(securityContext):
                  =(privileged): "false"
            containers:
              - =(securityContext):
                  =(privileged): "false"
